--- a/src/components/UserProductTable.css
+++ b/src/components/UserProductTable.css
@@ -1,7 +1,3 @@
-.inputStyle {
-    border: 0;
-    background:transparent;
-    width: 40px;
-}
+
 
 
